# yumchat

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/copilot/: README.md  architecture.md  tech-stack.md
src/: app.rs  config.rs  events.rs  main.rs  models.rs  tokens.rs
src/api/: mod.rs
src/storage/: mod.rs
src/ui/: markdown.rs  mod.rs  widgets.rs
