[package]
name = "yumchat"
version = "0.1.0"
edition = "2021"
authors = ["YumChat Contributors"]
description = "A terminal UI chat application for AI models"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.13"
wiremock = "0.6"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
